commit css from Nani

--- a/Compro_online_system/src/main/webapp/resources/css/style3.css
+++ b/Compro_online_system/src/main/webapp/resources/css/style3.css
@@ -54,7 +54,7 @@ a.hiddenanchor{
 	color: rgb(6, 106, 117);
 	padding: 2px 0 10px 0;
 	font-family: 'FranchiseRegular','Arial Narrow',Arial,sans-serif;
-	font-weight: bold;
+	/*font-weight: bold;*/
 	text-align: center;
 	padding-bottom: 30px;
 }
