--- a/Compro_online_system/src/main/webapp/resources/css/style2.css
+++ b/Compro_online_system/src/main/webapp/resources/css/style2.css
@@ -54,7 +54,7 @@ a.hiddenanchor{
 	color: rgb(6, 106, 117);
 	padding: 2px 0 10px 0;
 	font-family: 'FranchiseRegular','Arial Narrow',Arial,sans-serif;
-	font-weight: bold;
+	/*font-weight: bold;*/
 	text-align: center;
 	padding-bottom: 30px;
 }
@@ -301,10 +301,28 @@ p.change_link{
 	border: 1px solid rgba(147, 184, 189,0.8);
 	-webkit-box-shadow: 0pt 2px 5px rgba(105, 108, 109,  0.7),	0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
 	   -moz-box-shadow: 0pt 2px 5px rgba(105, 108, 109,  0.7),	0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
-	        box-shadow: 0pt 2px 5px rgba(105, 108, 109,  0.7),	0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
+	        /*box-shadow: 0pt 2px 5px rgba(105, 108, 109,  0.7),	0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;*/
 	-webkit-box-shadow: 5px;
 	-moz-border-radius: 5px;
-		 border-radius: 5px;
+		 /*border-radius: 5px;*/
+			
+}
+
+#application{
+	position: absolute;
+	top: 0px;
+	width: 88%;	
+	padding: 18px 6% 60px 6%;
+	margin: 0 0 35px 0;
+	background: rgb(247, 247, 247);
+	border: 1px solid rgba(147, 184, 189,0.8);
+        -webkit-box-shadow: 0pt 2px 5px rgba(105, 108, 109,  0.7),	0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
+	   -moz-box-shadow: 0pt 2px 5px rgba(105, 108, 109,  0.7),	0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
+	      
+	-webkit-box-shadow: 5px;
+	-moz-border-radius: 5px;
+		
+       z-index: 22;
 			
 }
 #register{	
@@ -314,6 +332,7 @@ p.change_link{
 #login{
 	z-index: 22;
 }
+
 #toregister:target ~ #wrapper #register,
 #tologin:target ~ #wrapper #login{
 	z-index: 22;
