--- a/Compro_online_system/src/main/webapp/resources/css/style.css
+++ b/Compro_online_system/src/main/webapp/resources/css/style.css
@@ -300,6 +300,43 @@ p.change_link{
 	position: relative;
 	top: 1px;
 }
+p.logout{
+	position: absolute;
+	color: rgb(127, 124, 124);
+	left: 0px;
+	height: 20px;
+	width: 440px;
+	padding: 17px 30px 20px 30px;
+	font-size: 16px	;
+	text-align: right;
+}
+#wrapper p.logout a {
+	display: inline-block;
+	font-weight: bold;
+	/*background: rgb(247, 248, 241);*/
+	padding: 2px 6px;
+	color: rgb(111, 189, 189);
+	margin-left: 10px;
+	/*text-decoration: none;*/
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	/*border: 1px solid rgb(203, 213, 214);*/
+	-webkit-transition: all 0.4s linear;
+	-moz-transition: all 0.4s  linear;
+	-o-transition: all 0.4s linear;
+	-ms-transition: all 0.4s  linear;
+	transition: all 0.4s  linear;
+}
+#wrapper p.logout a:hover {
+	color: rgb(57, 191, 215);
+	background: rgb(247, 247, 247);
+	border: 1px solid rgb(74, 179, 198);
+}
+#wrapper p.logout a:active{
+	position: relative;
+	top: 1px;
+}
 /** Styling both forms **/
 #register, 
 #login{
@@ -323,7 +360,7 @@ p.change_link{
 	top: 0px;
 	width: 88%;	
 	padding: 18px 6% 60px 6%;
-	margin: 0 0 35px 0;
+	margin: 0 -100px 35px;
 	background: rgb(247, 247, 247);
 	border: 1px solid rgba(147, 184, 189,0.8);
         -webkit-box-shadow: 0pt 2px 5px rgba(105, 108, 109,  0.7),	0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
